# bank_churn

./: .gitignore  eda.ipynb  model.ipynb  predictions.csv  pyproject.toml  readme.md
